<resources>
    <string name="app_name">AppBodega</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">"Iniciar Sesion "</string>
    <string name="menu_principal">Menu Principal</string>
    <string name="agregar">"Agregar "</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="informes">Informes</string>
    <string name="tituloagregar">"Agregar "</string>
    <string name="codigo">Cod Producto:</string>
    <string name="nombre">"Nombre: "</string>
    <string name="cantidad">Cantidad:</string>
    <string name="precio">Precio:</string>
    <string name="descripcion">Descripción:</string>
    <string name="valbtnagregar">Agregar</string>
    <string name="valbtngaleria">"Seleccionar desde la galeria "</string>
    <string name="valbtniniciarsesion">"Iniciar Sesion "</string>
    <string name="imagen">"Imagen "</string>
    <string name="eee" />
    <string name="ooo" />
    <string name="iii" />
    <string name="valetdescripcion" />
    <string name="titulo">"Editar "</string>
    <string name="codigoproducto">Cod Producto:</string>
    <string name="nombreproducto">Nombre:</string>
    <string name="cantidadproducto">Cantidad:</string>
    <string name="precioproducto">Precio:</string>
    <string name="descripcionproducto">Descripción:</string>
    <string name="valbtngaleriaedit">"Seleccionar desde la galeria "</string>
    <string name="valbtneditar">Editar</string>
    <string name="sss" />
    <string name="valetnombreedit">Nombre del Producto</string>
    <string name="valetprecioedit">Ingrese Precio</string>
    <string name="valetcodigoedit">Ingrese cod. producto</string>
    <string name="valetcodigo">Ingrese cod. de producto</string>
    <string name="valetnombre">Nombre de producto</string>
    <string name="valetprecio">Ingrese precio</string>
    <string name="valbtneliminar">Eliminar</string>
    <string name="valbtngaleriadelete">"Seleccionar desde la galeria "</string>
    <string name="imageneditar">Imagen</string>
    <string name="tituloeliminar">Eliminar</string>
    <string name="codigoproductodelete">Cod Producto:</string>
    <string name="nombreproductodelete">Nombre:</string>
    <string name="cantidaddelete">Cantidad:</string>
    <string name="preciodelete">Precio:</string>
    <string name="descripciondelete">Descripción:</string>
    <string name="imagendelete">IMAGEN</string>
    <string name="valetcodigodelete">Ingrese cod producto</string>
    <string name="valetnombredelete">Nombre de producto</string>
    <string name="valetpreciodelete">Ingrese precio</string>
    <string name="tituloinforme">Informe</string>
    <string name="informess">Informes</string>
    <string name="fecha">Fecha de Informe:</string>
    <string name="filtrar">Filtrar productos por:</string>
    <string name="valbtngenerar">Generar Informe</string>
    <string name="valbtnverinforme">Ver Informe</string>
    <string name="valbtncompartir">Compartir</string>
    <string name="valbtnimprimir">Imprimir</string>
    <string name="valbtnguardar">Guardar</string>
    <string name="valcbrecordar">"Recordarme "</string>
</resources>