<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EliminarFragment">

    <EditText
        android:id="@+id/etpreciodelete"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/valetpreciodelete"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/textView19"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck"
        tools:layout_editor_absoluteX="240dp" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/preciodelete"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/etnombredelete"
        tools:layout_editor_absoluteX="268dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/nombreproductodelete"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/etcodigodelete" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tituloeliminar"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/codigoproductodelete"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/cantidaddelete"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/etnombredelete"
        tools:layout_editor_absoluteX="52dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/descripciondelete"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/etpreciodelete"
        tools:layout_editor_absoluteX="52dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btngaleriadelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/valbtngaleriadelete"
        app:icon="@drawable/ic_menu_gallery"
        app:layout_constraintTop_toBottomOf="@+id/textView22"
        tools:layout_editor_absoluteX="45dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btneliminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/valbtneliminar"
        app:layout_constraintTop_toBottomOf="@+id/btngaleriadelete"
        tools:layout_editor_absoluteX="147dp"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp" />

    <EditText
        android:id="@+id/etcodigodelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/valetcodigodelete"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/textView16"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/etnombredelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/valetnombredelete"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/textView17"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/imagendelete"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        tools:layout_editor_absoluteY="530dp"
        tools:ignore="MissingConstraints" />

    <SearchView
        android:id="@+id/search_view"
        android:layout_width="122dp"
        android:layout_height="37dp"
        android:layout_marginEnd="8dp"
        android:iconifiedByDefault="false"
        android:queryHint="Buscar..."
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        tools:layout_editor_absoluteY="59dp" />


    <NumberPicker
        android:id="@+id/numberPicker"
        android:layout_width="43dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:maxValue="100"
        android:minValue="0"
        android:orientation="horizontal"
        android:value="0"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="289dp" />


    <EditText
        android:id="@+id/editText"
        android:layout_width="298dp"
        android:layout_height="99dp"
        android:gravity="start|top"
        android:hint="Ingrese su texto aquí..."
        android:inputType="textMultiLine"
        android:lines="5"
        android:scrollbars="vertical"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="408dp"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>