<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditarFragment">


    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/imageneditar"
        android:textAllCaps="true"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="60dp"
        tools:layout_editor_absoluteY="565dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btneditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/valbtneditar"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/btngaleriaedit" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/titulo"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/codigoproducto"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombreproducto"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="169dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/cantidadproducto"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/etnombreedit"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="60dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/precioproducto"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/etnombreedit"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="245dp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/descripcionproducto"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/etprecioedit"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="51dp" />

    <Button
        android:id="@+id/btngaleriaedit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/valbtngaleriaedit"
        app:icon="@drawable/ic_menu_gallery"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.937"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/textView21"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp" />

    <EditText
        android:id="@+id/etnombreedit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/valetnombreedit"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        tools:ignore="Autofill,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/etprecioedit"
        android:layout_width="151dp"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/valetprecioedit"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        tools:layout_editor_absoluteX="201dp"
        tools:ignore="Autofill,MissingConstraints" />

    <EditText
        android:id="@+id/etcodigoedit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/valetcodigoedit"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        tools:ignore="TouchTargetSizeCheck" />

    <SearchView
        android:id="@+id/search_view"
        android:layout_width="131dp"
        android:layout_height="30dp"
        android:iconifiedByDefault="false"
        android:queryHint="Buscar ..."
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.827"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="67dp"
        tools:ignore="MissingConstraints" />


    <NumberPicker
        android:id="@+id/numberPicker"
        android:layout_width="43dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:maxValue="100"
        android:minValue="0"
        android:orientation="horizontal"
        android:value="0"
        tools:layout_editor_absoluteX="71dp"
        tools:layout_editor_absoluteY="309dp" />


    <EditText
        android:id="@+id/editText"
        android:layout_width="312dp"
        android:layout_height="119dp"
        android:gravity="start|top"
        android:hint="Ingrese su texto aquí..."
        android:inputType="textMultiLine"
        android:lines="5"
        android:scrollbars="vertical"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="422dp" />


</androidx.constraintlayout.widget.ConstraintLayout>